# StdWorkerThread

./: CMakeLists.txt  Fault.cpp  README.md  Thread.cpp  Thread.h  ThreadMsg.h  WorkerThread.cpp  WorkerThread.h  main.cpp  stdafx.cpp
.github/workflows/: cmake_clang.yml  cmake_ubuntu.yml  cmake_windows.yml
